@@ -47,6 +47,8 @@ static int max_queued = 100;
 
 uint64_t g_bytes_received = 0;
 uint64_t g_bytes_sent = 0;
+uint64_t g_pub_bytes_received = 0;
+uint64_t g_pub_bytes_sent = 0;
 unsigned long g_msgs_received = 0;
 unsigned long g_msgs_sent = 0;
 unsigned long g_pub_msgs_received = 0;
@@ -789,6 +791,8 @@ void mqtt3_db_sys_update(mosquitto_db *db, int interval, time_t start_time)
 	static unsigned int msgsps_sent = -1;
 	static unsigned long long bytes_received = -1;
 	static unsigned long long bytes_sent = -1;
+	static unsigned long long pub_bytes_received = -1;
+	static unsigned long long pub_bytes_sent = -1;
 	static unsigned int bytesps_received = -1;
 	static unsigned int bytesps_sent = -1;
 	static int subscription_count = -1;
@@ -892,6 +896,18 @@ void mqtt3_db_sys_update(mosquitto_db *db, int interval, time_t start_time)
 			mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/bytes/sent", 2, strlen(buf), buf, 1);
 		}
 		
+		if(pub_bytes_received != g_pub_bytes_received){
+			pub_bytes_received = g_pub_bytes_received;
+			snprintf(buf, 100, "%llu", pub_bytes_received);
+			mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/publish/bytes/received", 2, strlen(buf), buf, 1);
+		}
+
+		if(pub_bytes_sent != g_pub_bytes_sent){
+			pub_bytes_sent = g_pub_bytes_sent;
+			snprintf(buf, 100, "%llu", pub_bytes_sent);
+			mqtt3_db_messages_easy_queue(db, NULL, "$SYS/broker/publish/bytes/sent", 2, strlen(buf), buf, 1);
+		}
+
 		if(uptime){
 			value = msgs_received/uptime;
 			if(msgsps_received != value){
